add iSTFTNet2 Relatedwork

--- a/Models/Vocoder/2023.08.14_iSTFTNet2.md
+++ b/Models/Vocoder/2023.08.14_iSTFTNet2.md
@@ -69,6 +69,26 @@ Finally, Section~\ref{sec:conclusions} concludes the study and discusses future 
 
 ## 2·Related Works: 相关工作
 
+iSTFTNet~\cite{TKanekoICASSP2022} is one of the fastest and most lightweight neural vocoders.
+These characteristics were obtained by replacing some of the output-side layers of a fully neural vocoder with fast and lightweight iSTFT.
+Particularly, it uses a fast and lightweight 1D CNN (e.g., HiFi-GAN~\cite{JKongNeurIPS2020}) as the backbone with a high processing speed.
+However, it is challenging for a 1D CNN to model high-dimensional spectrograms because of the difficulty in capturing local structures in the frequency direction.
+Hence, iSTFTNet reduces the frequency dimension using temporal upsampling as follows:
+
+$$
+  \text{iSTFT} (f_s, h_s, w_s)
+  = \text{iSTFT} \left( \frac{f_1}{s}, \frac{h_1}{s}, \frac{w_1}{s} \right),
+$$
+
+where $f_s$, $h_s$, and $w_s$ indicate the FFT size, hop length, and window length, respectively, required for the iSTFT after $\times s$ temporal upsampling.
+This equation is based on the time and frequency tradeoff, that is, $f_1 \cdot 1 = f_s \cdot s = \text{constant}$, and indicates that the frequency dimension can be reduced $s$ times by conducting $\times s$ temporal upsampling.
+
+Figure~\ref{fig:architecture}(a) shows the overall architecture of iSTFTNet.
+We present the architecture of iSTFTNet-\texttt{C8C8I4},\footnote{This is the same as iSTFTNet-\texttt{C8C8} described in~\cite{TKanekoICASSP2022}.
+Here, we added \texttt{I4} to specify the temporal upsampling scale in the iSTFT.} which is the best balanced model that improves the speed and model size while maintaining speech quality, where \texttt{C}$x$ indicates the use of 1D CNN blocks with $\times x$ temporal upsampling, and \texttt{I}$y$ indicates the use of iSTFT with $\times y$ temporal upsampling.
+When prioritizing the speed, a model that performs temporal upsampling fewer times, for example, iSTFTNet-\texttt{C8C1I32}, which conducts temporal upsampling once, is better.
+However, it is shown that such a model deteriorates speech quality because of the difficulty of a 1D CNN in modeling high-dimensional spectrograms~\cite{TKanekoICASSP2022}.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
