add iSTFTNet2 exp

--- a/Models/Vocoder/2023.08.14_iSTFTNet2.md
+++ b/Models/Vocoder/2023.08.14_iSTFTNet2.md
@@ -116,6 +116,41 @@ We demonstrated the empirical performance difference between the two 2D blocks i
 
 ## 4·Experiments: 实验
 
+### Dataset
+
+We examined the effectiveness of iSTFTNet2 using two representative datasets.
+\textit{LJSpeech}~\cite{ljspeech17}, which includes 13,100 audio clips of a single English speaker, and 12,500, 100, and 500 audio clips were used for training, validation, and evaluation, respectively.
+\textit{VCTK}~\cite{JYamagishiCSTR2016}, which comprises 44,081 audio clips of 108 different English speakers, and 41,921, 1,080, and 1,080 audio clips were  used for training, validation, and evaluation, respectively.
+Following a study on HiFi-GAN~\cite{JKongNeurIPS2020}, audio clips were sampled at $22.05$ kHz, and $80$-dimensional log-mel spectrograms were extracted from the audio clips with an FFT size of $1024$, a hop length of $256$, and a window length of $1024$.
+
+### Implementation
+
+We used \textit{iSTFTNet-\texttt{C8C8I4}}~\cite{TKanekoICASSP2022} as a baseline because it is the best-balanced model and its speech quality has been demonstrated~\cite{TKanekoICASSP2022} to be comparable to that of HiFi-GAN~\cite{JKongNeurIPS2020}, which is a widely used baseline model.
+Specifically, we implemented iSTFTNet-\texttt{C8C8I4} based on \textit{HiFi-GAN V2} (a lightweight variant) because we were interested in the performance of the lightweight model.\footnote{In additional experiments, we also examined the performance when \textit{HiFi-GAN V1} (a high-quality variant) was used as a baseline, and observed a similar tendency in terms of cFW2VD, RTF, and \#~Param.}
+We implemented iSTFTNet2 by replacing the modules of iSTFTNet-\texttt{C8C8I4}, as shown in Figure~\ref{fig:architecture}.
+Particularly, we implemented the two variants using different 2D blocks, as shown in Figure~\ref{fig:blocks}.
+For clarity, we denote iSTFTNet2 with 2D ResBlocks (Figure~\ref{fig:blocks}(a)) and that with 2D ShuffleBlocks (Figure~\ref{fig:blocks}(b)) as \textit{iSTFTNet2-Base} and \textit{iSTFTNet2-Small}, respectively.
+As another comparison model, we examined \textit{iSTFTNet-\texttt{C8C1I32}}, which conducts the same temporal upsampling as iSTFTNet2 but uses 1D ResBlocks instead of 2D blocks unlike iSTFTNet2.
+This model was used to validate the importance of 2D blocks.
+All models were implemented based on open-source code,\footnote{\label{foot:parallel_wavegan}\url{https://github.com/kan-bayashi/ParallelWaveGAN}} and the same training settings were used.
+Specifically, a combination of least-squares GAN~\cite{XMaoICCV2017}, mel-spectrogram~\cite{JKongNeurIPS2020}, and feature matching ~\cite{ALarsenICML2016,KKumarNeurIPS2019} losses was used as the loss function.
+Each model was trained for $2.5$M iterations using the Adam optimizer~\cite{DPKingmaICLR2015} with a batch size of $16$, an initial learning rate of $0.0002$, and momentum terms $\beta_1$ and $\beta_2$ of $0.5$ and $0.9$, respectively.
+
+### Evaluation Metrics
+
+We conducted mean opinion score (\textit{MOS}) tests to evaluate perceptual quality.
+Twenty audio clips were randomly selected from the evaluation set, and log-mel spectrograms extracted from the audio clips were used as vocoder inputs.
+In addition to the speech synthesized by the abovementioned models, \textit{ground-truth} speech was included as an anchor sample.
+Ten listeners participated in each online test and were asked to assess speech quality using a five-grade evaluation: 1 = bad, 2 = poor, 3 = fair, 4 = good, and 5 = excellent.
+As an objective metric, we used the conditional Fr\'{e}chet wav2vec distance (\textit{cFW2VD})~\cite{TKanekoICASSP2022}, which measures the distribution distance between the real and synthesized speech in a wav2vec 2.0~\cite{ABaevskiNeurIPS2020} feature space conditioned on the text.
+The smaller the value, the higher the similarity.
+We evaluated the inference speed using a real-time factor (\textit{RTF}) that was calculated by dividing the inference time by the duration of the synthesized speech (fixed at $1$~s in the experiments).
+The RTF was measured using a single thread on an Intel Core i7-12700H CPU.
+The smaller the value, the higher the speed.
+We evaluated the model size using the number of parameters (\textit{\#~Param}).
+The smaller the value, the more lightweight the model.
+The audio samples are available from the link on the first page.\footnoteref{foot:samples}
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
