add DAC Introduction

--- a/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
+++ b/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
@@ -49,6 +49,34 @@ We hope our work can lay the foundation for the next generation of high-fidelity
 
 ## 1·Introduction: 引言
 
+Generative modeling of high-resolution audio is difficult due to high dimensionality (\textasciitilde44,100 samples per second of audio) \citep{mehri2016samplernn, kumar2019melgan}, and presence of structure at different time-scales with both short and long-term dependencies.
+To mitigate this problem, audio generation is typically divided into two stages: 1) predicting audio conditioned on some intermediate representation such as mel-spectrograms \citep{mehri2016samplernn, ping2017deep, kumar2019melgan, prenger2019waveglow} and 2) predicting the intermediate representation given some conditioning information, such as text \citep{shen2018natural, ren2020fastspeech}.
+This can be interpreted as a hierarchical generative model, with observed intermediate variables.
+Naturally, an alternate formulation is to learn the intermediate variables using the variational auto-encoder (VAE) framework, with a learned conditional prior to predict the latent variables given some conditioning.
+This formulation, with continuous latent variables and training an expressive prior using normalizing flows has been quite successful for speech synthesis \citep{kim2021conditional, tan2022naturalspeech}.
+
+A closely related idea is to train the same varitional-autoencoder with discrete latent variables using VQ-VAE \citep{van2017neural}.
+Arguably, discrete latent variables are a better choice since expressive priors can be trained using powerful autoregressive models that have been developed for modeling distributions over discrete variables \citep{oord2016wavenet}.
+Specifically, transformer language models \citep{vaswani2017attention} have already exhibited the capacity to scale with data and model capacity to learn arbitrarily complex distributions such as text\citep{brown2020language}, images\citep{esser2021taming, yu2021vector}, audio \citep{borsos2022audiolm, wang2023neural}, music \citep{agostinelli2023musiclm}, etc.
+While modeling the prior is straightforward, modeling the discrete latent codes using a quantized auto-encoder remains a challenge.
+
+Learning these discrete codes can be interpreted as a lossy compression task, where the audio signal is compressed into a discrete latent space by vector-quantizing the representations of an autoencoder using a fixed length codebook.
+This audio compression model needs to satisfy the following properties: 1) Reconstruct audio with high fidelity and free of artifacts 2) Achieve high level of compression along with temporal downscaling to learn a compact representation that discards low-level imperceptible details while preserving high-level structure \citep{van2017neural, razavi2019generating} 3) Handle all types of audio such as speech, music, environmental sounds, different audio encodings (such as mp3) as well as different sampling rates using a single universal model.
+
+While the recent neural audio compression algorithms such as SoundStream \citep{zeghidour2021soundstream} and EnCodec \citep{defossez2022high} partially satisfy these properties, they often suffer from the same issues that plague GAN-based generation models.
+Specifically, such models exhibit audio artifacts such as tonal artifacts \cite{pons2021upsampling}, pitch and periodicity artifacts \citep{morrison2021chunked} and imperfectly model high-frequencies leading to audio that are clearly distinguishable from originals.
+These models are often tailored to a specific type of audio signal such as speech or music and struggle to model generic sounds.
+We make the following contributions:
+
+- We introduce \textbf{Improved RVQGAN} a high fidelity universal audio compression model, that can compress 44.1 KHz audio into discrete codes at 8 kbps bitrate (\textasciitilde 90x compression) with minimal loss in quality and fewer artifacts.
+Our model outperforms state-of-the-art methods by a large margin even at lower bitrates (higher compression) , when evaluated with both quantitative metrics and qualitative listening tests.
+- We identify a critical issue in existing models which don't utilize the full bandwidth due to \textbf{codebook collapse} (where a fraction of the codes are unused) and fix it using improved codebook learning techniques.
+- We identify a side-effect of \textbf{quantizer dropout} - a technique designed to allow a single model to support variable bitrates, actually hurts the full-bandwidth audio quality and propose a solution to mitigate it.
+- We make impactful design changes to existing neural audio codecs by adding periodic inductive biases, multi-scale STFT discriminator, multi-scale mel loss and provide thorough ablations and intuitions to motivate them.
+- Our proposed method is a universal audio compression model, capable of handling speech, music, environmental sounds, different sampling rates and audio encoding formats.
+
+We provide [code [Github]](https://github.com/descriptinc/descript-audio-codec), models, and [audio samples [URL]](https://descript.notion.site/Descript-Audio-Codec-11389fce0ce2419891d6591a68f814d5) that we encourage the reader to listen to.
+
 ## 2·Related Works: 相关工作
 
 ## 3·Methodology: 方法
