--- a/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
+++ b/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
@@ -153,6 +153,39 @@ we use the loss weightings of $15.0$ for the multi-scale mel loss, $2.0$ for the
 
 ## 4·Experiments: 实验
 
+### Data sources
+
+We train our model on a large dataset compiled of speech, music, and environmental sounds. For speech, we use the DAPS dataset \cite{mysore2014can}, the clean speech segments from DNS Challenge 4 \cite{dns}, the Common Voice dataset \cite{ardila2019common}, and the VCTK dataset \cite{veaux2017cstr}. For music, we use the MUSDB dataset \cite{rafii2017musdb18}, and the Jamendo dataset \cite{bogdanov2019mtg}. Finally, for environmental sound, we use both the balanced and unbalanced train segments from AudioSet \cite{gemmeke2017audio}. All audio is resampled to 44kHz.
+
+During training, we extract short excerpts from each audio file, and normalize them to -24 dB LUFS. The only data augmentation we apply is to randomly shift the phase of the excerpt, uniformly. For evaluation, we use the evaluation segments from AudioSet \cite{gemmeke2017audio}, two speakers that are held out from DAPS \cite{mysore2014can} (F10, M10) for speech, and the test split of MUSDB \cite{rafii2017musdb18}. We extract 3000 10-second segments (1000 from each domain), as our test set.
+
+### Balanced data sampling
+
+We take special care in how we sample from our dataset. Though our dataset is resampled to 44kHz, the data within it may be band-limited in some way. That is, some audio may have had an original sampling rate much lower than 44kHz. This is especially prevalent in speech data, where the true sampling rates of the underlying data can vary greatly (e.g. the Common Voice data is commonly 8-16kHz). When we trained models on varying sampling rates, we found that the resultant model often would not reconstruct data above a certain frequency. When investigating, we found that this threshold frequency corresponded to the average true sampling rate of our dataset. To fix this, we introduce a \textit{balanced data sampling} technique.
+
+We first split our dataset into data sources that we know to be \textit{full-band} - they are confirmed to contain energy in frequencies up to the desired Nyquist frequency (22.05kHz) of the codec - and data sources where we have no assurances of the max frequency. When sampling batches, we make sure that a full-band item is sampled. Finally, we ensure that in each batch, there are an equal number of items from each domain: speech, music, and environmental sound. In our ablation study, we examine how this balanced sampling technique affects model performance.
+
+### Model and training recipe
+
+Our model consists of a convolutional encoder, a residual vector quantizer, and a convolutional decoder. The basic building block of our network is a convolutional layer which either upsamples or downsamples with some stride, followed by a residual layer consisting of convolutional layers interleaved with non-linear Snake activations. Our encoder has 4 of these layers, each of which downsamples the input audio waveform at rates $[2, 4, 8, 8]$. Our decoder has 4 corresponding layers, which upsample at rates $[8, 8, 4, 2]$. We set the decoder dimension to $1536$. In total, our model has 76M parameters, with 22M in the encoder, and 54M in the decoder. We also examine decoder dimensions of 512 (31M parameters) and 1024 (49M parameters).
+
+We use the multi-period discriminator \cite{kong2020hifi}, and a complex multi-scale STFT discriminator. For the first, we use periods of $[2, 3, 5, 7, 11]$, and for the second, we use window lengths $[2048, 1024, 512]$, with a hop-length that is $1/4$ the window length. For band-splitting of the STFT, we use the band-limits $[0.0, 0.1, 0.25, 0.5, 0.75, 1.0]$. For the reconstruction loss, we use distance between log-mel spectrograms with window lengths $[32, 64, 128, 256, 512, 1024, 2048]$, with corresponding number of mels for each of $[5, 10, 20, 40, 80, 160, 320]$. The hop length is $1/4$ of the window length. We use feature matching and codebook losses, as described in Section \ref{sec:loss}.
+
+For our ablation study, we train each model with a batch size of $12$ for $250$k iterations. In practice, this takes about 30 hours to train on a single GPU.  For our final model, we train with a batch size of $72$ for $400$k iterations. We train with excerpts of duration 0.38s. We use the AdamW optimizer \cite{adamw} with a learning rate of $1e-4$, $\beta_1 = 0.8$, and $\beta_2 = 0.9$, for both the generator
+and the discriminator. We decay the learning rate at every step, with $\gamma = 0.999996$.
+
+### Objective and subjective metrics
+
+To evaluate our models, we use the following objective metrics:
+
+- ViSQOL \cite{chinen2020visqol}: an intrusive perceptual quality metric that uses spectral similarity to the ground truth to estimate a mean opinion score.
+- Mel distance: distance between log mel spectrograms of the reconstructed and ground truth waveforms. The configuration of this loss is the same as described in \ref{sec:loss}.
+- STFT distance: distance between log magnitude spectrograms of the reconstructed and ground truth waveforms. We use window lengths $[2048, 512]$. This metric captures the fidelity in higher frequencies better than the mel distance.
+- Scale-invariant source-to-distortion ratio (SI-SDR) \cite{le2019sdr}: distance between waveforms, similar to signal-to-noise ratio, with modifications so that it is invariant to scale differences. When considered alongside spectral metrics, SI-SDR indicates the quality of the phase reconstruction of the audio.
+- Bitrate efficiency: We calculate bitrate efficiency as the sum of the entropy (in bits) of each codebook when applied on a large test set divided by the number of bits across all codebooks. For efficient bitrate utilization this should tend to 100\% and lower percentages indicate that the bitrate is being underutilized.
+
+We also conduct a MUSHRA-inspired listening test, with a hidden reference, but no low-passed anchor. In it each one of ten expert listeners rated 12 randomly selected 10-second samples from our evaluation set, 4 of each domain; speech, music and environmental sounds. We compare our proposed system at 2.67kbps, 5.33kbps and 8kbps to EnCodec at 3kbps, 6kbps and 12kbps.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
