--- a/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
+++ b/Models/SpeechCodec/2023.06.11_Descript-Audio-Codec.md
@@ -188,6 +188,32 @@ We also conduct a MUSHRA-inspired listening test, with a hidden reference, but n
 
 ## 5·Results: 结果
 
+### Ablation Study
+
+We conduct a thorough ablation study of our model, varying components of our training recipe and model configuration one-by-one. To compare models, we use the four objective metrics described in Section \ref{sec:metrics}. The results of our ablation study can be seen in Table \ref{tabs:vqgan_ablation}.
+
+Architecture:} We find that varying the decoder dimension has some effect on performance, with smaller models having consistently worse metrics. However, the model with decoder dimension $1024$ has similar performance to the baseline, indicating that smaller models can still be competitive. The change with the biggest impact was switching out the \textit{relu} activation for the \textit{snake} activation. This change resulted in much better SI-SDR and other metrics. Similar to the results in BigVGAN \cite{lee2022bigvgan}, we find that the periodic inductive bias of the snake activation is helpful for waveform generation. For our final model, we use the largest decoder dimension ($1536$), and the snake activation.
+
+\textbf{Discriminator:} Next, we removed or changed the discriminators one-by-one, to see their impact on the final result. First, we find that the multi-band STFT discriminator does \textit{not} result in significantly better metrics, except for SI-SDR, where it is slightly better. However, when inspecting spectrograms of generated waveforms, we find that the multi-band discriminator alleviates aliasing of high frequencies. The upsampling layers of the decoder introduce significant aliasing artifacts \citep{pons2021upsampling}. The multi-band discriminator is more easily able to detect these aliasing artifacts and give feedback to the generator to remove them. Since aliasing artifacts are very small in terms of magnitude, their effect on our objective metrics is minimal. Thus, we keep the multi-band discriminator.
+
+We find that adversarial losses are critical to both the quality of the output audio, as well as the bitrate efficiency. When training with only reconstruction loss, the bitrate efficiency drops from 99\% to 62\%, and the SI-SDR drops from 9.12 to 1.07. The other metrics capture spectral distance, and are relatively unaffected. However, the audio from this model has many artifacts, including buzzing, as it has not learned to reconstruct phase. Finally, we found that swapping the multi-period discriminator for the single-scale waveform discriminator proposed in MelGAN \cite{kumar2019melgan} resulted in worse SI-SDR. We retain the multi-period discriminator.
+
+\textbf{Impact of low-hop reconstruction loss:} We find that low-hop reconstruction is critical to both the waveform loss and the modeling of fast transients and high frequencies. When replaced with a single-scale high-hop mel reconstruction (80 mels, with a window length of 512), we find significantly lower SI-SDR (7.68 from 9.12). Subjectively, we find that this model does much better at capturing certain sorts of sounds, such as cymbal crashes, beeping and alarms, and singing vocals. We retain the multi-scale mel reconstruction loss in our final recipe.
+
+\textbf{Latent dimension of codebook:} the latent dimension of the codebook has a significant impact on bitrate efficiency, and consequently the reconstruction quality. If set too low or too high (e.g. 2, 256), quantitative metrics are significantly worse with drastically lowered bitrate efficiency. Lower bitrate efficiency results in effectively lowered bandwidth, which harms the modeling capability of the generator. As the generator is weakened, the discriminator tends to ``win'', and thus the generator does not learn to generate audio with high audio quality. We find $8$ to be optimal for the latent dimension.
+
+\textbf{Quantization setup:} we find that using exponential moving average as the codebook learning method, as in EnCodec\cite{defossez2022high}, results in worse metrics especially for SI-SDR. It also results in poorer codebook utilization across all codebooks (Figure \ref{fig:codebook_usage}). When taken with its increased implementation complexity (requiring K-Means initialization and random restarts), we retain our simpler projected lookup method for learning codebooks, along with a commitment loss. Next, we note that the quantization dropout rate has a significant effect on the quantitative metrics. However, as seen in Figure \ref{fig:quantizer_dropout}, a dropout of $0.0$ results in poor reconstruction with fewer codebooks. As this makes usage of the codec challenging for downstream generative modeling tasks, we instead use a dropout rate of $0.5$ in our final model. This achieves a good trade-off between audio quality at full bitrate as well as lower bitrates. Finally, we show that we can increase the max bitrate of our model from 8kbps to 24kbps and achieve excellent audio quality, surpassing all other model configurations. However, for our final model, we train at the lower bitrates, in order to push the compression rate as much as possible.
+
+\textbf{Balanced data sampling:} When removed, this results in worse metrics across the board. Empirically, we find that without balanced data sampling, the model produces waveforms that have a max frequency of around 18kHz. This corresponds to the max frequency preserved by various audio compression algorithms like MPEG, which make up the vast majority of our datasets. With balanced data sampling, we sample full-band audio from high-quality datasets (e.g. DAPS) just as much as possibly band-limited audio from datasets of unknown quality (e.g. Common Voice). This alleviates the issue, allowing our codec to reconstruct full-band audio, as well as band-limited audio.
+
+### Comparison to other methods
+
+We now compare the performance of our final model with competitive baselines: EnCodec \cite{defossez2022high}, Lyra \cite{zeghidour2021soundstream}, and Opus \cite{valin2012definition}, a popular open-source audio codec. For EnCodec, Lyra, and Opus, we use publicly available open-source implementations provided by the authors. We compare using both objective and subjective evaluations, at varying bitrates. The results are shown in Table \ref{tabs:vqgan_comparison}. We find that the proposed codec out-performs all competing codecs at all bitrates in terms of both objective and subjective metrics, while modeling a much wider bandwidth of 22kHz.
+
+In Figure 3, we show the result of our MUSHRA study, which compares EnCodec to our proposed codec at various bitrates. We find that our codec achieves much higher MUSHRA scores than EnCodec at all bitrates. However, even at the highest bitrate, it still falls short of the reference MUSHRA score, indicating that there is room for improvement. We note that the metrics of our final model are still lower than the 24kbps model trained in our ablation study, as can be seen in Table \ref{tabs:vqgan_ablation}. This indicates that the remaining performance gap may be closed by increasing the maximum bitrate.
+
+In Figure 4 and Table 4, we compare our proposed model trained with the same exact configuration as EnCodec (24 KHz sampling rate, 24 kbps bitrate, 320 stride, 32 codebooks of 10 bits each) to existing baselines, in both quantitative and qualitative metrics. In Figure 5, we show qualitative results by sound category.
+
 ## 6·Conclusions: 结论
 
 We have presented a high-fidelity universal neural audio compression algorithm that achieves remarkable compression rates while maintaining audio quality across various types of audio data. Our method combines the latest advancements in audio generation, vector quantization techniques, and improved adversarial and reconstruction losses. Our extensive evaluation against existing audio compression algorithms demonstrates the superiority of our approach, providing a promising foundation for future high-fidelity audio modeling. With thorough ablations, open-source code, and trained model weights, we aim to contribute a useful centerpiece to the generative audio modeling community.
